# py-mail-mcp

./: .env.template  .gitignore  LICENSE.md  README.md  configure_email.py  main.py  pyproject.toml  requirements.txt  server-email.py
